[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/enemies/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Bullet_Inimigo/bullet_inimigo_teleguiado.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 9.53123

[sub_resource type="Animation" id=2]
resource_name = "glow"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bullet_estrela_negra:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.321569, 0.94902, 0.00392157, 1 ), Color( 0.984314, 0.160784, 0, 1 ), Color( 0.431373, 0, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "glow2"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bullet_estrela_negra:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0.984314, 1 ), Color( 0.992157, 0.929412, 0.423529, 1 ), Color( 0.431373, 0, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("bullet_estrela_negra:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="bullet_inimigo_teleguiado" type="Area2D"]
collision_layer = 32
script = ExtResource( 2 )

[node name="bullet_estrela_negra" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 308.136, 1578.96, 25.4217, 25.819 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/glow = SubResource( 2 )
anims/glow2 = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="timer" type="Node" parent="."]

[node name="slowDash" type="Timer" parent="timer"]
wait_time = 2.0
[connection signal="area_entered" from="." to="." method="_on_bullet_inimigo_teleguiado_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_bullet_inimigo_teleguiado_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="timer/slowDash" to="." method="_on_slowDash_timeout"]
